Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -156,7 +156,7 @@ every picture/.append style={
 
 \usepackage{listings} % Paquete para insertar código. 
 \usepackage{xcolor} % Paquete para definir colores.
-\usepackage{multicols}
+\usepackage{multicol}
 
 % Se definen los distintos colores que se utilizan para resaltar ciertos elementos del código:
 \definecolor{codegreen}{rgb}{0.04314,0.6745,0.07843} % Verde.
