--- a/biblio.bib
+++ b/biblio.bib
@@ -199,3 +199,28 @@ RESULTS: Two hundred thirty-one patients met inclusion criteria, with 192 receiv
   year={2003},
 }
 
+@article{Sanjar2020,
+   abstract = {Accurate house price forecasts are very important for formulating national economic policies. In this paper, we offer an effective method to predict houses' sale prices. Our algorithm includes one-hot encoding to convert text data into numeric data, feature correlation to select only the most correlated variables, and a technique to overcome the missing data. Our approach is an effective way to handle missing data in large datasets with the K-nearest neighbor algorithm based on the most correlated features. As far as we are concerned, there has been no previous research that has focused on important features dealing with missing observations. Compared to the typical machine learning prediction algorithms, the prediction accuracy of the proposed method is 92.01% with the random forest algorithm, which is more efficient than the other methods.},
+   author = {Karshiev Sanjar and Olimov Bekhzod and Jaesoo Kim and Anand Paul and Jeonghong Kim},
+   doi = {10.3390/ijgi9040227},
+   issn = {22209964},
+   issue = {4},
+   journal = {ISPRS International Journal of Geo-Information},
+   keywords = {Handling missing data,House price prediction,Random forest},
+   month = {4},
+   publisher = {MDPI AG},
+   title = {Missing data imputation for geolocation-based price prediction using KNN-MCF method},
+   volume = {9},
+   year = {2020},
+}
+
+
+%%%% Rpackages %%%%
+
+@Book{DMwR2,
+   title = {Data Mining with R, learning with case studies, 2nd edition},
+   author = {L. Torgo},
+   publisher = {Chapman and Hall/CRC},
+   year = {2016},
+   url = {http://ltorgo.github.io/DMwR2},
+}
