--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -1,4 +1,4 @@
-\section{INTRODUCCIÓN}\label{sec:introduction}
+\section{CAPÍTULO I: INTRODUCCIÓN}\label{sec:introduction}
 
 En esta sección del trabajo se van a explicar y definir los conceptos básicos en relación al contexto del trabajo que se van a utilizar a lo largo del mismo. Además, se va a realizar una revisión bibliográfica de los temas que se van a tratar.
 
