--- a/lib/chapter2.tex
+++ b/lib/chapter2.tex
@@ -1,4 +1,4 @@
-\section{OBJETIVOS}\label{sec:objectives}
+\section{CAPÍTULO II: OBJETIVOS}\label{sec:objectives}
 
 En esta sección del trabajo se van a definir los objetivos generales y específicos que se pretenden alcanzar en el presente Trabajo de Fin de Máster. 
 
