--- a/lib/chapter4.tex
+++ b/lib/chapter4.tex
@@ -1,4 +1,4 @@
-\section{METODOLOGÍA}\label{sec:methodology}
+\section{CAPÍTULO IV: METODOLOGÍA}\label{sec:methodology}
 
 En este capítulo, se describirá la metodología utilizada para conseguir cumplir los objetivos establecidos. 
 
