--- a/biblio.bib
+++ b/biblio.bib
@@ -200,7 +200,7 @@ RESULTS: Two hundred thirty-one patients met inclusion criteria, with 192 receiv
 }
 
 @article{Sanjar2020,
-   abstract = {Accurate house price forecasts are very important for formulating national economic policies. In this paper, we offer an effective method to predict houses' sale prices. Our algorithm includes one-hot encoding to convert text data into numeric data, feature correlation to select only the most correlated variables, and a technique to overcome the missing data. Our approach is an effective way to handle missing data in large datasets with the K-nearest neighbor algorithm based on the most correlated features. As far as we are concerned, there has been no previous research that has focused on important features dealing with missing observations. Compared to the typical machine learning prediction algorithms, the prediction accuracy of the proposed method is 92.01% with the random forest algorithm, which is more efficient than the other methods.},
+   abstract = {Accurate house price forecasts are very important for formulating national economic policies. In this paper, we offer an effective method to predict houses' sale prices. Our algorithm includes one-hot encoding to convert text data into numeric data, feature correlation to select only the most correlated variables, and a technique to overcome the missing data. Our approach is an effective way to handle missing data in large datasets with the K-nearest neighbor algorithm based on the most correlated features. As far as we are concerned, there has been no previous research that has focused on important features dealing with missing observations. Compared to the typical machine learning prediction algorithms, the prediction accuracy of the proposed method is 92.01 \% with the random forest algorithm, which is more efficient than the other methods.},
    author = {Karshiev Sanjar and Olimov Bekhzod and Jaesoo Kim and Anand Paul and Jeonghong Kim},
    doi = {10.3390/ijgi9040227},
    issn = {22209964},
